--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <title>Digital Ocean</title>
   </head>
   <body>
+    <header>
+      <div class="header_top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-4 col-sm-3 col-md-3">
+              Logo
+            </div>
+            <div class="col-md-5 visible-md visible-lg">
+              Lorem ipsum dolor sit amet.
+            </div>
+            <div class="col-md-4 visible-md visible-lg">
+              Lorem ipsum dolor sit amet.
+            </div>
+            <div class="col-xs-4 visible-xs visible-sm pull-right">
+              Hamburger Menu
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
