--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Digital Ocean</title>
   </head>
   <body>
+    <!-- header -->
     <header>
+      <!-- header-top -->
       <div class="header_top">
         <div class="container">
           <div class="row">
@@ -27,16 +29,35 @@
           </div>
         </div>
       </div>
+      <!-- /header-top -->
+      <!-- hero -->
+      <div class="hero">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-7">
+              <div class="hero_text"></div>
+            </div>
+            <div class="col-xs-12 col-sm-5">
+              <div class="hero_form"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /hero -->
 
     </header>
+    <!-- /header -->
 
+    <!-- main -->
     <main>
 
     </main>
-
+    <!-- /main -->
+    
+    <!-- footer -->
     <footer>
 
     </footer>
-
+    <!-- /footer -->
   </body>
 </html>
