Struttura sezione Businesses

--- a/index.html
+++ b/index.html
@@ -44,16 +44,35 @@
         </div>
       </div>
       <!-- /hero -->
-
     </header>
     <!-- /header -->
 
     <!-- main -->
     <main>
+      <!-- sezione businesses -->
+      <section id="businesses" class="bg_grey">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h2>Lorem Ipsum</h2>
+              <div class="businesses_list">
+                <div class="business"></div>
+                <div class="business"></div>
+                <div class="business"></div>
+                <div class="business"></div>
+                <div class="business"></div>
+                <div class="business"></div>
+              </div>
+              <a href="#">Lorem Ipsum</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /sezione businesses -->
 
     </main>
     <!-- /main -->
-    
+
     <!-- footer -->
     <footer>
 
