--- a/index.html
+++ b/index.html
@@ -69,7 +69,37 @@
         </div>
       </section>
       <!-- /sezione businesses -->
-
+      <!-- sezione features -->
+      <section id="features">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iste sed laudantium, omnis nulla magni. Ea rerum, et sed, placeat vitae veniam officiis recusandae, a, tempore magnam autem! Eos!</p>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4">
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+              </div>
+              <div class="col-xs-12 col-sm-8">
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /sezione features -->
     </main>
     <!-- /main -->
 
