Struttura sezione Designed for developers

--- a/index.html
+++ b/index.html
@@ -100,6 +100,32 @@
         </div>
       </section>
       <!-- /sezione features -->
+      <!-- sezione designed -->
+      <section id="designed">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h2>Lorem ipsum dolor sit amet</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus quos aspernatur odio nemo porro sint, debitis rem, maiores hic totam, libero reprehenderit adipisci sunt fugiat numquam! Velit, repudiandae, corporis. Vitae.</p>
+              <!-- carousel -->
+              <div class="my_carousel">
+                <div class="carousel_img"></div>
+                <div class="carousel_caption text-center">
+                  <p>Lorem ipsum dolor sit amet</p>
+                  <div class="carousel_nav">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                  </div>
+                </div>
+              </div>
+              <!-- /carousel -->
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /sezione designed -->
     </main>
     <!-- /main -->
 
