Auto stash before rebase of "refs/heads/master"

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
       <!-- /sezione businesses -->
       <!-- sezione features -->
-      <section id="features">
+      <section id="services">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
@@ -126,6 +126,7 @@
         </div>
       </section>
       <!-- /sezione designed -->
+
     </main>
     <!-- /main -->
 
