--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 <div>Lorem</div>
               </div>
               <div class="col-xs-12 col-sm-8">
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
+                <div class="service"></div>
+                <div class="service"></div>
+                <div class="service"></div>
+                <div class="service"></div>
               </div>
             </div>
           </div>
@@ -126,7 +126,26 @@
         </div>
       </section>
       <!-- /sezione designed -->
-
+      <section id="features">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                  <div class="feature"></div>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="feature"></div>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="feature"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- /main -->
 
