Struttura sezione Regions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       <!-- /sezione businesses -->
-      <!-- sezione features -->
+      <!-- sezione services -->
       <section id="services">
         <div class="container">
           <div class="row">
@@ -99,7 +99,7 @@
           </div>
         </div>
       </section>
-      <!-- /sezione features -->
+      <!-- /sezione services -->
       <!-- sezione designed -->
       <section id="designed">
         <div class="container">
@@ -126,6 +126,7 @@
         </div>
       </section>
       <!-- /sezione designed -->
+      <!-- sezione features -->
       <section id="features">
         <div class="container">
           <div class="row">
@@ -146,6 +147,112 @@
           </div>
         </div>
       </section>
+      <!-- /sezione features -->
+      <!-- sezione regions -->
+      <section id="regions">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <div class="row">
+                <!-- region row 1 -->
+                <div class="region_row col-xs-12 col-md-6">
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                </div>
+                <!-- /region row 1 -->
+                <!-- region row 2 -->
+                <div class="region_row col-xs-12 col-md-6">
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                  <div class="region">
+                    <div class="row">
+                      <div class="col-xs-2">LOREM</div>
+                      <div class="col-xs-8">Lorem Ipsum</div>
+                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                    </div>
+                  </div>
+                </div>
+                <!-- /region row 2 -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- sezione regions -->
     </main>
     <!-- /main -->
 
