--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       <section id="designed">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 text-center">
               <h2>Lorem ipsum dolor sit amet</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus quos aspernatur odio nemo porro sint, debitis rem, maiores hic totam, libero reprehenderit adipisci sunt fugiat numquam! Velit, repudiandae, corporis. Vitae.</p>
               <!-- carousel -->
               <div class="my_carousel">
                 <div class="carousel_img"></div>
-                <div class="carousel_caption text-center">
+                <div class="carousel_caption">
                   <p>Lorem ipsum dolor sit amet</p>
                   <div class="carousel_nav">
                     <div class="circle"></div>
@@ -153,7 +153,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+              <h2 class="text-center">Lorem ipsum dolor sit amet.</h2>
               <div class="row">
                 <!-- region row 1 -->
                 <div class="region_row col-xs-12 col-md-6">
@@ -252,7 +252,28 @@
           </div>
         </div>
       </section>
-      <!-- sezione regions -->
+      <!-- /sezione regions -->
+      <!-- sezione testimonials -->
+      <section id="testimonials">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <h2 class="text-center">Lorem ipsum dolor sit amet</h2>
+              <div class="my_carousel">
+                <div class="carousel_img"></div>
+                <div class="carousel_caption text-center">
+                  <div class="carousel_nav">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /sezione testimonials -->
     </main>
     <!-- /main -->
 
