Struttura sezione CTA

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h2 class="text-center">Lorem ipsum dolor sit amet</h2>
+              <h2 class="text-center">Lorem ipsum dolor sit amet.</h2>
               <div class="my_carousel">
                 <div class="carousel_img"></div>
                 <div class="carousel_caption text-center">
@@ -274,6 +274,16 @@
         </div>
       </section>
       <!-- /sezione testimonials -->
+      <section id="cta">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <h2>Lorem ipsum dolor sit amet.</h2>
+              <a href="#">Lorem Ipsum</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- /main -->
 
