--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
       <!-- /sezione services -->
       <!-- sezione designed -->
-      <section id="designed">
+      <section id="designed" class="bg_grey">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
@@ -149,7 +149,7 @@
       </section>
       <!-- /sezione features -->
       <!-- sezione regions -->
-      <section id="regions">
+      <section id="regions" class="bg_grey">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
@@ -274,7 +274,7 @@
         </div>
       </section>
       <!-- /sezione testimonials -->
-      <section id="cta">
+      <section id="cta" class="bg_grey">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
@@ -289,6 +289,57 @@
 
     <!-- footer -->
     <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <div class="footer_copyright">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus maxime mollitia incidunt, consequuntur quas officia adipisci repudiandae iure. Autem quia debitis, impedit est numquam, saepe laboriosam nemo ut quibusdam officia!
+            </div>
+            <div class="footer_social">
+              <div class="social_link"></div>
+              <div class="social_link"></div>
+              <div class="social_link"></div>
+              <div class="social_link"></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-8">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <h3>Lorem Ipsum</h3>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <h3>Lorem Ipsum</h3>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <h3>Lorem Ipsum</h3>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-3">
+                <h3>Lorem Ipsum</h3>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+                <div>Lorem</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </footer>
     <!-- /footer -->
