--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-md-4 visible-md visible-lg">
               Lorem ipsum dolor sit amet.
             </div>
-            <div class="col-xs-4 visible-xs visible-sm pull-right">
+            <div class="col-xs-4 visible-xs visible-sm pull-right text-right">
               Hamburger Menu
             </div>
           </div>
@@ -53,7 +53,7 @@
       <section id="businesses" class="bg_grey">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 text-center">
               <h2>Lorem Ipsum</h2>
               <div class="businesses_list">
                 <div class="business"></div>
