--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Digital Ocean</title>
@@ -15,13 +17,27 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-4 col-sm-3 col-md-3">
-              Logo
+              <a href="#"><img class="logo_img" src="img/digitalocean-logo.png" alt=""></a>
             </div>
             <div class="col-md-5 visible-md visible-lg">
-              Lorem ipsum dolor sit amet.
+              <nav class="main_nav">
+                <ul class="main_nav_list">
+                  <li class="main_nav_list_item list_inline"><a class="nav_dropdown" href="#">Products</a></li>
+                  <li class="main_nav_list_item list_inline"><a href="#">Customers</a></li>
+                  <li class="main_nav_list_item list_inline"><a class="nav_dropdown" href="#">Community</a></li>
+                  <li class="main_nav_list_item list_inline"><a href="#">Pricing</a></li>
+                </ul>
+              </nav>
             </div>
             <div class="col-md-4 visible-md visible-lg">
-              Lorem ipsum dolor sit amet.
+              <nav class="user_nav">
+                <ul class="user_nav_list text-right">
+                  <li class="user_nav_list_item list_inline"><a href="#">Docs</a></li>
+                  <li class="user_nav_list_item list_inline"><a class="nav_dropdown" href="#">Support</a></li>
+                  <li class="user_nav_list_item list_inline"><a href="#">Login</a></li>
+                  <li class="user_nav_list_item signup_button list_inline"><a href="#">Sign Up</a></li>
+                </ul>
+              </nav>
             </div>
             <div class="col-xs-4 visible-xs visible-sm pull-right text-right">
               Hamburger Menu
