Struttura e stile hamburger_menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </nav>
             </div>
             <div class="col-xs-4 visible-xs visible-sm pull-right text-right">
-              Hamburger Menu
+              <a id="hamburger_menu" href="#"><i class="fas fa-bars"></i></a>
             </div>
           </div>
         </div>
