Struttura e stile Hero

--- a/index.html
+++ b/index.html
@@ -51,10 +51,26 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-7">
-              <div class="hero_text"></div>
+              <!-- hero text -->
+              <div class="hero_text">
+                <h1>The simplest cloud platform for developers & teams</h1>
+                <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.</p>
+              </div>
+              <!-- /hero text -->
             </div>
             <div class="col-xs-12 col-sm-5">
-              <div class="hero_form"></div>
+              <!-- hero form -->
+              <div class="hero_form">
+                <h2 class="text-center">Deploy your app in seconds.</br><span>Get started now.</span></h2>
+                <form action="#">
+                  <input type="email" id="form_email" name="email" placeholder="Email">
+                  <input type="password" id="form_pwd" name="password" placeholder="Password">
+                  <button class="btn_form btn_create_account">Create your account</button>
+                  <button class="btn_form btn_google_account">Sign up with Google</button>
+                </form>
+                <p class="text-center">By signing up you agree to the <a href="">Terms of Service</a>.</p>
+              </div>
+              <!-- /hero form -->
             </div>
           </div>
         </div>
