Struttura e stile sezione Businesses

--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
-              <h2>Lorem Ipsum</h2>
-              <div class="businesses_list">
-                <div class="business"></div>
-                <div class="business"></div>
-                <div class="business"></div>
-                <div class="business"></div>
-                <div class="business"></div>
-                <div class="business"></div>
-              </div>
-              <a href="#">Lorem Ipsum</a>
+              <h2 class="text-uppercase">Innovative businesses trust digitalocean </h2>
+              <ul class="businesses_list text-center">
+                <li class="business list_inline"><img src="img/docker-logo.svg" alt="Docker"></li>
+                <li class="business list_inline"><img src="img/gitlab-logo.svg" alt="Gitlab"></li>
+                <li class="business list_inline"><img src="img/slack-logo.svg" alt="Slack"></li>
+                <li class="business list_inline"><img src="img/hashicorp-logo.svg" alt="Hashicorp"></li>
+                <li class="business list_inline"><img src="img/wework-logo.svg" alt="Wework"></li>
+                <li class="business list_inline"><img src="img/splunk-logo.svg" alt="Splunk"></li>
+              </ul>
             </div>
           </div>
         </div>
