Struttura e stile sezione Services

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
-              <h2>Lorem ipsum dolor sit amet.</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim expedita iste sed laudantium, omnis nulla magni. Ea rerum, et sed, placeat vitae veniam officiis recusandae, a, tempore magnam autem! Eos!</p>
+              <h2>Deploy and scale seamlessly.</h2>
+              <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
             </div>
           </div>
         </div>
@@ -114,17 +114,35 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-sm-4">
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
+                <ul class="services_list">
+                  <li>Deploy</li>
+                  <li>Manage</li>
+                  <li>Secure</li>
+                  <li>Scale</li>
+                  <li>Monitor</li>
+                </ul>
               </div>
-              <div class="col-xs-12 col-sm-8">
-                <div class="service"></div>
-                <div class="service"></div>
-                <div class="service"></div>
-                <div class="service"></div>
+              <div class="col-xs-12 col-sm-8 clearfix">
+                <div class="service">
+                  <img src="img/cluster-icon.svg" alt="Cluster deployments">
+                  <h3>Cluster deployments</h3>
+                  <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+                </div>
+                <div class="service">
+                  <img src="img/drop-icon.svg" alt="Optimized compute types">
+                  <h3>Optimized compute types</h3>
+                  <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
+                </div>
+                <div class="service">
+                  <img src="img/plus-icon.svg" alt="One-click apps">
+                  <h3>One-click apps</h3>
+                  <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+                </div>
+                <div class="service">
+                  <img src="img/globe-icon.svg" alt="Global availability">
+                  <h3>Global availability</h3>
+                  <p>Deploy to any of our data center regions around the world.</p>
+                </div>
               </div>
             </div>
           </div>
