--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col-xs-12 col-sm-5">
               <!-- hero form -->
               <div class="hero_form">
-                <h2 class="text-center">Deploy your app in seconds.</br><span>Get started now.</span></h2>
+                <h2 class="text-center">Deploy your app in seconds.<br><span>Get started now.</span></h2>
                 <form action="#">
                   <input type="email" id="form_email" name="email" placeholder="Email">
                   <input type="password" id="form_pwd" name="password" placeholder="Password">
@@ -154,19 +154,19 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
-              <h2>Lorem ipsum dolor sit amet</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus quos aspernatur odio nemo porro sint, debitis rem, maiores hic totam, libero reprehenderit adipisci sunt fugiat numquam! Velit, repudiandae, corporis. Vitae.</p>
+              <h2>Designed for developers</h2>
+              <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
               <!-- carousel -->
               <div class="my_carousel">
-                <div class="carousel_img"></div>
-                <div class="carousel_caption">
-                  <p>Lorem ipsum dolor sit amet</p>
-                  <div class="carousel_nav">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                  </div>
+                <img class="carousel_img" src="img/carousel-img1.jpg" alt="Create Droplets">
+              </div>
+              <div class="carousel_caption">
+                <p>Create compute servers in 55 seconds or less</p>
+                <div class="carousel_nav">
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+                  <div class="circle"></div>
                 </div>
               </div>
               <!-- /carousel -->
