--- a/index.html
+++ b/index.html
@@ -179,17 +179,32 @@
       <section id="features">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 text-center">
-              <h2>Lorem ipsum dolor sit amet.</h2>
+            <div class="col-xs-12">
+              <h2 class="text-center">The features your business needs</h2>
               <div class="row">
                 <div class="col-xs-12 col-sm-4">
-                  <div class="feature"></div>
+                  <div class="feature">
+                    <img src="img/pricing-icon.svg" alt="Predictable pricing">
+                    <h3>Predictable pricing</h3>
+                    <p>Leave complex pricing structures behind. Always know what you'll pay per month with a flat, industry-leading price structure.</p>
+                    <a href="#">Pricing &gt;</a>
+                  </div>
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                  <div class="feature"></div>
+                  <div class="feature">
+                    <img src="img/service-icon.svg" alt="Predictable pricing">
+                    <h3>World-class service</h3>
+                    <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
+                    <a href="#">Support &gt;</a>
+                  </div>
                 </div>
                 <div class="col-xs-12 col-sm-4">
-                  <div class="feature"></div>
+                  <div class="feature">
+                    <img src="img/reliable-icon.svg" alt="Predictable pricing">
+                    <h3>Reliable platform</h3>
+                    <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+                    <a href="#">Security &gt;</a>
+                  </div>
                 </div>
               </div>
             </div>
