Struttura e stile sezione Regions

--- a/index.html
+++ b/index.html
@@ -217,50 +217,50 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h2 class="text-center">Lorem ipsum dolor sit amet.</h2>
+              <h2 class="text-center">Service your customers around the world from 12 regions.</h2>
               <div class="row">
                 <!-- region row 1 -->
                 <div class="region_row col-xs-12 col-md-6">
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">AMS2</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">AMS3</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">BLR1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">FRA1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">LON1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">London, UK</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">NYC1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Ney York, USA</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                 </div>
@@ -269,44 +269,44 @@
                 <div class="region_row col-xs-12 col-md-6">
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">AMS2</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">AMS3</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">BLR1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">FRA1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">LON1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">London, UK</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
-                      <div class="col-xs-2">LOREM</div>
-                      <div class="col-xs-8">Lorem Ipsum</div>
-                      <div class="col-xs-2"><a href="#">Lorem</a></div>
+                      <div class="col-xs-1"><h4 class="region_tagname">NYC1</h4></div>
+                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">New York, USA</p></div>
+                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                 </div>
