Struttura e stile sezione Testimonials

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </section>
       <!-- /sezione features -->
       <!-- sezione regions -->
-      <section id="regions" class="bg_grey">
+      <section id="regions" class="bg_gradient_blue">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
@@ -318,19 +318,25 @@
       </section>
       <!-- /sezione regions -->
       <!-- sezione testimonials -->
-      <section id="testimonials">
+      <section id="testimonials" class="bg_grey">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
-              <h2 class="text-center">Lorem ipsum dolor sit amet.</h2>
+            <div class="col-xs-12 text-center">
+              <h2>Development teams love DigitalOcean</h2>
               <div class="my_carousel">
-                <div class="carousel_img"></div>
-                <div class="carousel_caption text-center">
-                  <div class="carousel_nav">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                  </div>
+                <div class="carousel_img">
+                  <img class="testimonials_logo" src="img/rockerbox-logo.png" alt="RockerBox">
+                  <p class="testimonials_quote">"We have been able to make scaling the technical infrastructure of our business cost effective and efficient."</p>
+                  <p class="testimonials_name">Rick O'Toole</p>
+                  <p class="testimonials_role">Co-founder and CTO</p>
+                  <a href="#">Read story &gt;</a>
+                </div>
+              </div>
+              <div class="carousel_caption text-center">
+                <div class="carousel_nav">
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+                  <div class="circle"></div>
                 </div>
               </div>
             </div>
@@ -338,7 +344,7 @@
         </div>
       </section>
       <!-- /sezione testimonials -->
-      <section id="cta" class="bg_grey">
+      <section id="cta" class="bg_gradient_blue">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
