Struttura e stile sezione CTA

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <li class="user_nav_list_item list_inline"><a href="#">Docs</a></li>
                   <li class="user_nav_list_item list_inline"><a class="nav_dropdown" href="#">Support</a></li>
                   <li class="user_nav_list_item list_inline"><a href="#">Login</a></li>
-                  <li class="user_nav_list_item signup_button list_inline"><a href="#">Sign Up</a></li>
+                  <li class="user_nav_list_item btn_signup list_inline"><a href="#">Sign Up</a></li>
                 </ul>
               </nav>
             </div>
@@ -348,8 +348,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 text-center">
-              <h2>Lorem ipsum dolor sit amet.</h2>
-              <a href="#">Lorem Ipsum</a>
+              <h2>Get started now.</h2>
+              <a class="btn btn_cta" href="#">Create your account</a>
             </div>
           </div>
         </div>
