Struttura e stile footer_copyright

--- a/index.html
+++ b/index.html
@@ -363,13 +363,16 @@
         <div class="row">
           <div class="col-xs-12 col-md-4">
             <div class="footer_copyright">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus maxime mollitia incidunt, consequuntur quas officia adipisci repudiandae iure. Autem quia debitis, impedit est numquam, saepe laboriosam nemo ut quibusdam officia!
-            </div>
-            <div class="footer_social">
-              <div class="social_link"></div>
-              <div class="social_link"></div>
-              <div class="social_link"></div>
-              <div class="social_link"></div>
+              <img src="img/digitalocean-brand.svg" alt="DigitalOcean">
+              <p class="copyright_text">&copy; 2018 DigitalOcean, LLC. All rights reserved.</p>
+              <p class="copyright_made">Proudly made in NY</p>
+              <ul class="social_list">
+                <li class="social_link"><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li class="social_link"><a href=""><i class="fab fa-facebook-square"></i></a></li>
+                <li class="social_link"><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li class="social_link"><a href=""><i class="fab fa-youtube"></i></a></li>
+                <li class="social_link"><a href=""><i class="fab fa-linkedin"></i></a></li>
+              </ul>
             </div>
           </div>
           <div class="col-xs-12 col-md-8">
