--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
             <div class="row">
               <div class="col-xs-12 col-sm-4">
                 <ul class="services_list">
-                  <li>Deploy</li>
-                  <li>Manage</li>
-                  <li>Secure</li>
-                  <li>Scale</li>
-                  <li>Monitor</li>
+                  <li class="services_list_item">Deploy</li>
+                  <li class="services_list_item">Manage</li>
+                  <li class="services_list_item">Secure</li>
+                  <li class="services_list_item">Scale</li>
+                  <li class="services_list_item">Monitor</li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-8 clearfix">
                 <div class="service">
-                  <img src="img/cluster-icon.svg" alt="Cluster deployments">
+                  <img class="service_icon" src="img/cluster-icon.svg" alt="Cluster deployments">
                   <h3>Cluster deployments</h3>
                   <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
                 </div>
                 <div class="service">
-                  <img src="img/drop-icon.svg" alt="Optimized compute types">
+                  <img class="service_icon" src="img/drop-icon.svg" alt="Optimized compute types">
                   <h3>Optimized compute types</h3>
                   <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
                 </div>
                 <div class="service">
-                  <img src="img/plus-icon.svg" alt="One-click apps">
+                  <img class="service_icon" src="img/plus-icon.svg" alt="One-click apps">
                   <h3>One-click apps</h3>
                   <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
                 </div>
                 <div class="service">
-                  <img src="img/globe-icon.svg" alt="Global availability">
+                  <img class="service_icon" src="img/globe-icon.svg" alt="Global availability">
                   <h3>Global availability</h3>
                   <p>Deploy to any of our data center regions around the world.</p>
                 </div>
@@ -224,43 +224,43 @@
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">AMS2</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">AMS3</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">BLR1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">FRA1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">LON1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">London, UK</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">London, UK</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">NYC1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Ney York, USA</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Ney York, USA</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                 </div>
@@ -270,43 +270,43 @@
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">AMS2</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">AMS3</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Amsterdam, Netherlands</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">BLR1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Bangalore, India</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">FRA1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">Frankfurt, Germany</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">LON1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">London, UK</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">London, UK</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                   <div class="region">
                     <div class="row">
                       <div class="col-xs-1"><h4 class="region_tagname">NYC1</h4></div>
-                      <div class="col-xs-7 col-xs-offset-1"><p class="region_location">New York, USA</p></div>
-                      <div class="col-xs-3 text-right"><a href="#">Test speed &gt;</a></div>
+                      <div class="col-xs-6 col-xs-offset-1"><p class="region_location">New York, USA</p></div>
+                      <div class="col-xs-4 text-right"><a href="#">Test speed &gt;</a></div>
                     </div>
                   </div>
                 </div>
@@ -362,6 +362,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-4">
+            <!-- footer copyright -->
             <div class="footer_copyright">
               <img src="img/digitalocean-brand.svg" alt="DigitalOcean">
               <p class="copyright_text">&copy; 2018 DigitalOcean, LLC. All rights reserved.</p>
@@ -374,46 +375,70 @@
                 <li class="social_link"><a href=""><i class="fab fa-linkedin"></i></a></li>
               </ul>
             </div>
+            <!-- /footer copyright -->
           </div>
           <div class="col-xs-12 col-md-8">
+            <!-- footer_menu -->
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-3">
-                <h3>Lorem Ipsum</h3>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
+                <h3>Company</h3>
+                <ul class="footer_menu_list">
+                  <li class="footer_menu_list_item"><a href="#">About</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Leadership</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Link</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Blog</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Careers</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Partner Network</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Referral Program</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Events</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Press</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Legal & Security</a></li>
+                </ul>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-3">
-                <h3>Lorem Ipsum</h3>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
+                <h3>Products</h3>
+                <ul class="footer_menu_list">
+                  <li class="footer_menu_list_item"><a href="#">Droplets</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Spaces</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Kubernetes</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Load Balancers</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Block Storage</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Tools & Integrations</a></li>
+                  <li class="footer_menu_list_item"><a href="#">One-Click Apps</a></li>
+                  <li class="footer_menu_list_item"><a href="#">API</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Pricing</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Documentation</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Release Notes</a></li>
+                </ul>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-3">
-                <h3>Lorem Ipsum</h3>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
+                <h3>Community</h3>
+                <ul class="footer_menu_list">
+                  <li class="footer_menu_list_item"><a href="#">Tutorials</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Meetups</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Q&A</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Write for Donations</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Droplets for Demos</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Hatch</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Shop Swag</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Research Program</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Currents Research</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Open Source</a></li>
+                </ul>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-3">
-                <h3>Lorem Ipsum</h3>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
-                <div>Lorem</div>
+                <h3>Support</h3>
+                <ul class="footer_menu_list">
+                  <li class="footer_menu_list_item"><a href="#">Contact Support</li>
+                  <li class="footer_menu_list_item"><a href="#">FAQ</li>
+                  <li class="footer_menu_list_item"><a href="#">Network Status</li>
+                </ul>
               </div>
             </div>
+            <!-- footer_menu -->
           </div>
         </div>
       </div>
-
     </footer>
     <!-- /footer -->
   </body>
