--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <li class="business list_inline"><img src="img/wework-logo.svg" alt="Wework"></li>
                 <li class="business list_inline"><img src="img/splunk-logo.svg" alt="Splunk"></li>
               </ul>
+              <a href="#">View customer stories &gt;</a>
             </div>
           </div>
         </div>
@@ -115,11 +116,11 @@
             <div class="row">
               <div class="col-xs-12 col-sm-4">
                 <ul class="services_list">
-                  <li class="services_list_item">Deploy</li>
-                  <li class="services_list_item">Manage</li>
-                  <li class="services_list_item">Secure</li>
-                  <li class="services_list_item">Scale</li>
-                  <li class="services_list_item">Monitor</li>
+                  <li class="services_list_item"><a href="#">Deploy</a></li>
+                  <li class="services_list_item"><a href="#">Manage</a></li>
+                  <li class="services_list_item"><a href="#">Secure</a></li>
+                  <li class="services_list_item"><a href="#">Scale</a></li>
+                  <li class="services_list_item"><a href="#">Monitor</a></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-sm-8 clearfix">
@@ -380,6 +381,7 @@
           <div class="col-xs-12 col-md-8">
             <!-- footer_menu -->
             <div class="row">
+              <!-- footer_menu column 1 -->
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <h3>Company</h3>
                 <ul class="footer_menu_list">
@@ -395,6 +397,8 @@
                   <li class="footer_menu_list_item"><a href="#">Legal & Security</a></li>
                 </ul>
               </div>
+              <!-- /footer_menu column 1 -->
+              <!-- footer_menu column 2 -->
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <h3>Products</h3>
                 <ul class="footer_menu_list">
@@ -411,6 +415,8 @@
                   <li class="footer_menu_list_item"><a href="#">Release Notes</a></li>
                 </ul>
               </div>
+              <!-- /footer_menu column 2 -->
+              <!-- footer_menu column 3 -->
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <h3>Community</h3>
                 <ul class="footer_menu_list">
@@ -426,19 +432,32 @@
                   <li class="footer_menu_list_item"><a href="#">Open Source</a></li>
                 </ul>
               </div>
+              <!-- /footer_menu column 3 -->
+              <!-- footer_menu column 4 -->
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <h3>Support</h3>
                 <ul class="footer_menu_list">
-                  <li class="footer_menu_list_item"><a href="#">Contact Support</li>
-                  <li class="footer_menu_list_item"><a href="#">FAQ</li>
-                  <li class="footer_menu_list_item"><a href="#">Network Status</li>
+                  <li class="footer_menu_list_item"><a href="#">Contact Support</a></li>
+                  <li class="footer_menu_list_item"><a href="#">FAQ</a></li>
+                  <li class="footer_menu_list_item"><a href="#">Network Status</a></li>
                 </ul>
               </div>
+              <!-- /footer_menu column 4 -->
             </div>
-            <!-- footer_menu -->
+            <!-- /footer_menu -->
           </div>
         </div>
       </div>
+      <!-- chat support -->
+      <div class="chat_support clearfix">
+        <div class="chat_avatar">
+          <div class="chat_msg_count">2</div>
+        </div>
+        <div class="chat_body">
+          <p class="chat_msg">Can I help answer any questions you have about DigitalOcean?</p>
+        </div>
+      </div>
+      <!-- /chat support -->
     </footer>
     <!-- /footer -->
   </body>
